Fix #1 - Use Github URL for test responses, add Travis